# JsonGui

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: node.js.yml  release.yml
JsonSkill/fill-gradient-colors/: fill-gradient-colors.md
JsonSkill/minecraft-standard/: standard.md
docs/: releasing.md
scripts/: stage-node-sidecar.ps1
server/: catalog-store.mjs  deluxemenus.mjs  dev.mjs  index.mjs  json-skill-store.mjs  mcp.mjs  plugin-scanner.mjs  project-store.mjs  schema.mjs  workspace-store.mjs  workspace-watcher.mjs
server/scripts/: refresh-catalog.mjs
server/test/: catalog-ingest.test.mjs  json-skill-store.test.mjs  mcp.test.mjs  plugin-scanner.test.mjs  server.test.mjs  workspace.test.mjs
server/test/fixtures/: item-table.html
shared/: seed-v1.json
shared/export/: deluxemenus.test.ts  deluxemenusMapper.ts  deluxemenusSerializer.ts  deluxemenusTypes.ts  deluxemenusValidation.ts  index.ts
src/: App.tsx  desktop.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: client.ts
src/components/: LibraryVirtualGrid.tsx  PixelItemIcon.tsx  PluginWorkspace.tsx  TrashDropZone.tsx
src/domain/: editor.test.ts  editor.ts  minecraftText.test.ts  minecraftText.ts  workspace.test.ts  workspace.ts
src/platform/: updater.test.ts  updater.ts
src/styles/: app.css  redesign.css  tokens.css
